# cmake_model

./: .gitignore  CMakeLists.txt  README.md
cmake/: VxlCfgLibDlib.cmake  VxlCfgLibOpenCV.cmake  VxlCfgLibOpenCV3.cmake  VxlCfgVal.cmake  VxlUtils.cmake  VxlUtilsPost.cmake
common/: CMakeLists.txt
common/interface/: vxlCmakeCfg.h.in  vxlComTypes.h  vxlErrorCode.h  vxlMacros.h  vxlSysInc.h
common/log/: CMakeLists.txt
common/log/include/: vxlLog.h  vxlLogAux.h
common/log/src/: vxlLog.cpp
common/utility/: example.rc.bak  example.rc.in  resource.h.in  vxlGitVersion.h.tmp  vxlLog.cpp  vxlLog.h  vxlMutex.h  vxlPortable.cpp  vxlPortable.h
modules/: CMakeLists.txt
modules/example/: CMakeLists.txt
modules/example/include/: IDrawImg.h  drawImg.h
modules/example/src/: IDrawImg.cpp  drawImg.cpp  drawImg.h
modules/exampleLog01/: CMakeLists.txt
modules/exampleLog01/include/: IWritelog01.h
modules/exampleLog01/src/: IWriteLog01.cpp  writeLog01.cpp  writeLog01.h
modules/exampleLog02/: CMakeLists.txt
modules/exampleLog02/include/: IWritelog02.h
modules/exampleLog02/src/: IWriteLog02.cpp  writeLog02.cpp  writeLog02.h
modules/videoCap/: CMakeLists.txt
modules/videoCap/include/: IVideoCap.h  IVideoCapAux.h
modules/videoCap/src/: IVideoCap.cpp  videoCap.cpp  videoCap.h
test/: CMakeLists.txt
test/dlibTest/: CMakeLists.txt
test/dlibTest/src/: dlibTest.cpp
test/exampleTest/: CMakeLists.txt
test/exampleTest/src/: exampleTest.cpp
test/logTest/: CMakeLists.txt
test/logTest/src/: logTest.cpp
test/videoCapTest/: CMakeLists.txt
test/videoCapTest/src/: videoCapTest.cpp
tool/: vxlCfg.csv  vxlGetGitInfo.py  vxlGetGitInfo.sh  vxlLoadCfg.py
